--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,12 +1,12 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #46b24a;
+  --foreground: #639e39;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #639e39;;
+    --foreground: #ffffff;
   }
 }
 
