--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -1,4 +1,3 @@
-/* Container geral */
 .container {
   display: flex;
   flex-direction: column;
@@ -8,7 +7,6 @@
   color: #1a1a1a;
 }
 
-/* Header */
 .header {
   position: relative;
   width: 100%;
@@ -28,10 +26,9 @@
 }
 
 .header:hover .headerImage {
-  transform: scale(1.05); /* efeito zoom suave */
+  transform: scale(1.05);
 }
 
-/* Overlay com título no header */
 .headerOverlay {
   position: absolute;
   top: 50%;
@@ -51,7 +48,6 @@
   font-size: 1.2rem;
 }
 
-/* Conteúdo central */
 .main {
   flex: 1;
   display: flex;
@@ -75,7 +71,6 @@
   color: #333;
 }
 
-/* Botão moderno */
 .button {
   padding: 1rem 2.5rem;
   background: linear-gradient(145deg, #46b24a, #3a9037);
@@ -93,7 +88,6 @@
   box-shadow: 6px 6px 10px #2e6d29, -6px -6px 10px #5fc25b;
 }
 
-/* Footer */
 .footer {
   padding: 1rem;
   background-color: #3b6e18;
